refactor: auth func naems, updated swagger doc
